minimum Warn log level for raven

--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -7,8 +7,8 @@
 		        layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		<target name="asyncFileWriter" xsi:type="AsyncWrapper">
 			
-    <target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.log"
-			        layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+		<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.log"
+			    layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 
 		<target name="asyncConsole" xsi:type="AsyncWrapper">
@@ -47,18 +47,19 @@
 	</targets>
 
 	<rules>
-    <logger name="*" minlevel="Debug" writeTo="asyncFileWriter">
-      <filters>
-        <when condition="logger=='Inceptum.AppServer.Logging.LogCache'" action="Ignore" />
-      </filters>
-    </logger>
-		<logger name="*" minlevel="Debug" writeTo="asyncConsole" />
+		<logger name="*" minlevel="Debug" writeTo="asyncFileWriter">
+		  <filters>
+			<when condition="logger=='Inceptum.AppServer.Logging.LogCache'" action="Ignore" />
+		  </filters>
+		</logger>
 		<logger name="*" minlevel="Trace" writeTo="asyncDebug" />
-    <logger name="*" minlevel="Trace" writeTo="managementConsole" >
-      <filters>
-        <when condition="logger=='Inceptum.AppServer.Logging.LogCache'" action="Ignore" />
-      </filters>
-    </logger>
+		<logger name="*" minlevel="Trace" writeTo="managementConsole" >
+			<filters>
+				<when condition="logger=='Inceptum.AppServer.Logging.LogCache'" action="Ignore" />
+			</filters>
+		</logger>
+		<logger name="Raven.*" minlevel="Warn" writeTo="asyncConsole" final="true"/>
+		<logger name="*" minlevel="Debug" writeTo="asyncConsole" />
 	</rules>
 
 </nlog>
