--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\Inceptum.AppServer.AppHost\packages.config" />
   <repository path="..\Inceptum.AppServer.Configuration\packages.config" />
   <repository path="..\Inceptum.AppServer.Management\packages.config" />
+  <repository path="..\Inceptum.AppServer.RavenDb\packages.config" />
   <repository path="..\Inceptum.AppServer.Sdk.Messaging\packages.config" />
   <repository path="..\Inceptum.AppServer.Sdk\packages.config" />
   <repository path="..\Inceptum.AppServer.TestApp\packages.config" />
