--- a/src/Inceptum.AppServer.Sdk.Messaging/Inceptum.AppServer.Sdk.Messaging.nuspec
+++ b/src/Inceptum.AppServer.Sdk.Messaging/Inceptum.AppServer.Sdk.Messaging.nuspec
@@ -12,7 +12,7 @@
     <copyright>Copyright 2013</copyright>
     <tags></tags>
 	<dependencies>
-        <dependency id="Inceptum.AppServer.Sdk" version="[$sdkVersion$]" />
+        <dependency id="Inceptum.AppServer.Sdk" version="$sdkVersion$" />
     </dependencies>  
   </metadata>
 </package>
