--- a/src/Inceptum.AppServer.TestApp/Inceptum.AppServer.TestApp.csproj
+++ b/src/Inceptum.AppServer.TestApp/Inceptum.AppServer.TestApp.csproj
@@ -114,9 +114,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\content.txt">
+    <None Include="Content\content.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
