--- a/src/Inceptum.AppServer.Sdk.Cqrs/Inceptum.AppServer.Sdk.Cqrs.csproj
+++ b/src/Inceptum.AppServer.Sdk.Cqrs/Inceptum.AppServer.Sdk.Cqrs.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Inceptum.AppServer.Sdk.Cqrs.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
