--- a/src/Inceptum.AppServer.Tests/packages.config
+++ b/src/Inceptum.AppServer.Tests/packages.config
@@ -5,7 +5,7 @@
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
   <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net40" />
   <package id="NLog" version="2.1.0" targetFramework="net40" />
-  <package id="Nuget.Core" version="2.7.1" targetFramework="net40" />
+  <package id="NuGet.Core" version="2.8.1" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
   <package id="Rx-Core" version="2.2.2" targetFramework="net40" />
