--- a/src/Inceptum.AppServer.Sdk.Cqrs/Inceptum.AppServer.Sdk.Cqrs.csproj
+++ b/src/Inceptum.AppServer.Sdk.Cqrs/Inceptum.AppServer.Sdk.Cqrs.csproj
@@ -45,8 +45,9 @@
     <Reference Include="EventStore.ClientAPI">
       <HintPath>..\packages\EventStore.Client.2.0.2\lib\net40\EventStore.ClientAPI.dll</HintPath>
     </Reference>
-    <Reference Include="Inceptum.Cqrs">
-      <HintPath>..\packages\Inceptum.Cqrs.1.0.7.7\lib\net45\Inceptum.Cqrs.dll</HintPath>
+    <Reference Include="Inceptum.Cqrs, Version=1.0.7.11, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Inceptum.Cqrs.1.0.7.11\lib\net45\Inceptum.Cqrs.dll</HintPath>
     </Reference>
     <Reference Include="Inceptum.Messaging">
       <HintPath>..\packages\Inceptum.Messaging.1.0.8.3\lib\net40\Inceptum.Messaging.dll</HintPath>
