--- a/src/Inceptum.AppServer/packages.config
+++ b/src/Inceptum.AppServer/packages.config
@@ -1,23 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.2" targetFramework="net40" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net40" requireReinstallation="True" />
   <package id="Castle.Core-NLog" version="3.2.0" targetFramework="net40" />
-  <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" />
-  <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
+  <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" requireReinstallation="True" />
+  <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.AspNet.SignalR.Core" version="1.1.2" targetFramework="net40" />
-  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.2" targetFramework="net40" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="0.21.0-pre" targetFramework="net40" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="0.21.0-pre" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.Owin.Hosting" version="0.21.0-pre" targetFramework="net40" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net40" />
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
-  <package id="NLog" version="2.1.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" requireReinstallation="True" />
+  <package id="NLog" version="2.1.0" targetFramework="net40" requireReinstallation="True" />
   <package id="NuGet.Core" version="2.8.2" targetFramework="net40" />
   <package id="Owin" version="1.0" targetFramework="net40" />
-  <package id="Rx-Core" version="2.2.2" targetFramework="net40" />
-  <package id="Rx-Interfaces" version="2.2.2" targetFramework="net40" />
-  <package id="Rx-Linq" version="2.2.2" targetFramework="net40" />
+  <package id="Rx-Core" version="2.2.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Rx-Interfaces" version="2.2.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Rx-Linq" version="2.2.2" targetFramework="net40" requireReinstallation="True" />
   <package id="Rx-Main" version="2.2.2" targetFramework="net40" />
-  <package id="Rx-PlatformServices" version="2.2.2" targetFramework="net40" />
+  <package id="Rx-PlatformServices" version="2.2.2" targetFramework="net40" requireReinstallation="True" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
