--- a/src/Inceptum.AppServer.Tests/packages.config
+++ b/src/Inceptum.AppServer.Tests/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.2" targetFramework="net40" />
-  <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" />
-  <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" requireReinstallation="True" />
+  <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net40" />
-  <package id="NLog" version="2.1.0" targetFramework="net40" />
+  <package id="NLog" version="2.1.0" targetFramework="net40" requireReinstallation="True" />
   <package id="NuGet.Core" version="2.8.2" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
-  <package id="Rx-Core" version="2.2.2" targetFramework="net40" />
-  <package id="Rx-Interfaces" version="2.2.2" targetFramework="net40" />
-  <package id="Rx-Linq" version="2.2.2" targetFramework="net40" />
+  <package id="Rx-Core" version="2.2.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Rx-Interfaces" version="2.2.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Rx-Linq" version="2.2.2" targetFramework="net40" requireReinstallation="True" />
   <package id="Rx-Main" version="2.2.2" targetFramework="net40" />
-  <package id="Rx-PlatformServices" version="2.2.2" targetFramework="net40" />
+  <package id="Rx-PlatformServices" version="2.2.2" targetFramework="net40" requireReinstallation="True" />
 </packages>
