--- a/src/Inceptum.AppServer.Configuration/packages.config
+++ b/src/Inceptum.AppServer.Configuration/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.2" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
-  <package id="NLog" version="2.1.0" targetFramework="net40" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" requireReinstallation="True" />
+  <package id="NLog" version="2.1.0" targetFramework="net40" requireReinstallation="True" />
 </packages>
