--- a/src/Inceptum.AppServer.Sdk/packages.config
+++ b/src/Inceptum.AppServer.Sdk/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.2" targetFramework="net40" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net40" requireReinstallation="True" />
   <package id="Castle.Core-NLog" version="3.2.0" targetFramework="net40" />
-  <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
-  <package id="NLog" version="2.1.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" requireReinstallation="True" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" requireReinstallation="True" />
+  <package id="NLog" version="2.1.0" targetFramework="net40" requireReinstallation="True" />
 </packages>
