--- a/src/Inceptum.AppServer/app.config
+++ b/src/Inceptum.AppServer/app.config
@@ -8,6 +8,9 @@
       <proxy />
     </defaultProxy>
   </system.net>
+  <appSettings>
+    <add key="confSvcUrl" value="http://sr-tls02-s01.test-s02.uniservers.ru:9223"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <probing privatePath="bin" />
