--- a/src/Inceptum.AppServer.Management/packages.config
+++ b/src/Inceptum.AppServer.Management/packages.config
@@ -5,6 +5,8 @@
   <package id="jQuery" version="1.6.4" targetFramework="net40" />
   <package id="Microsoft.AspNet.SignalR.JS" version="1.1.2" targetFramework="net40" />
   <package id="Microsoft.CompilerServices.AsyncTargetingPack" version="1.0.1" targetFramework="net40" requireReinstallation="True" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" requireReinstallation="True" />
+  <package id="NuGet.Core" version="2.8.3" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
