--- a/src/Inceptum.AppServer.TestApp/packages.config
+++ b/src/Inceptum.AppServer.TestApp/packages.config
@@ -5,7 +5,7 @@
   <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" requireReinstallation="True" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.CompilerServices.AsyncTargetingPack" version="1.0.1" targetFramework="net40" requireReinstallation="True" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" requireReinstallation="True" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NLog" version="2.1.0" targetFramework="net40" requireReinstallation="True" />
   <package id="RavenDB.Client" version="2.5.2700" targetFramework="net40" requireReinstallation="True" />
 </packages>
