--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -335,6 +335,76 @@
     <Content Include="Scripts\mdd_modal_background.png" />
     <Content Include="Scripts\mdd_styles.css" />
     <Content Include="Scripts\mdd_toolbar.png" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\comment\comment.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\comment\continuecomment.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\dialog\dialog.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\dialog\dialog.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\display\autorefresh.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\display\fullscreen.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\display\fullscreen.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\display\panel.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\display\placeholder.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\display\rulers.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\edit\closebrackets.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\edit\closetag.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\edit\continuelist.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\edit\matchbrackets.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\edit\matchtags.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\edit\trailingspace.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\fold\brace-fold.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\fold\comment-fold.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\fold\foldcode.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\fold\foldgutter.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\fold\foldgutter.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\fold\indent-fold.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\fold\markdown-fold.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\fold\xml-fold.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\hint\anyword-hint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\hint\css-hint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\hint\html-hint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\hint\javascript-hint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\hint\show-hint.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\hint\show-hint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\hint\sql-hint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\hint\xml-hint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\lint\coffeescript-lint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\lint\css-lint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\lint\html-lint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\lint\javascript-lint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\lint\json-lint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\lint\lint.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\lint\lint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\lint\yaml-lint.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\merge\merge.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\merge\merge.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\mode\loadmode.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\mode\multiplex.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\mode\multiplex_test.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\mode\overlay.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\mode\simple.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\runmode\colorize.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\runmode\runmode-standalone.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\runmode\runmode.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\runmode\runmode.node.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\scroll\annotatescrollbar.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\scroll\scrollpastend.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\scroll\simplescrollbars.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\scroll\simplescrollbars.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\search\match-highlighter.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\search\matchesonscrollbar.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\search\matchesonscrollbar.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\search\search.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\search\searchcursor.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\selection\active-line.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\selection\mark-selection.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\selection\selection-pointer.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\tern\tern.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\tern\tern.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\tern\worker.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\wrap\hardwrap.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\lib\codemirror.css" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\lib\codemirror.js" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\mode\javascript\javascript.js" />
     <EmbeddedResource Include="WebApi\Content\css\bootstrap-spinedit.css" />
     <EmbeddedResource Include="WebApi\Content\js\libs\bootstrap-spinedit.js" />
     <EmbeddedResource Include="WebApi\Content\css\bootstrap-datepicker.css" />
@@ -343,7 +413,6 @@
     <EmbeddedResource Include="WebApi\Content\css\bootstrap-responsive.min.css" />
     <EmbeddedResource Include="WebApi\Content\css\bootstrap.css" />
     <EmbeddedResource Include="WebApi\Content\css\bootstrap.min.css" />
-    <EmbeddedResource Include="WebApi\Content\css\codemirror.css" />
     <EmbeddedResource Include="WebApi\Content\css\docs.css" />
     <EmbeddedResource Include="WebApi\Content\css\prettify.css" />
     <EmbeddedResource Include="WebApi\Content\favicon.ico" />
@@ -369,8 +438,6 @@
     <EmbeddedResource Include="WebApi\Content\js\libs\bootstrap-notify.js" />
     <EmbeddedResource Include="WebApi\Content\js\libs\bootstrap.js" />
     <EmbeddedResource Include="WebApi\Content\js\libs\bootstrap.min.js" />
-    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\codemirror.js" />
-    <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\mode\javascript.js" />
     <EmbeddedResource Include="WebApi\Content\js\libs\console-log-wrapper.js" />
     <EmbeddedResource Include="WebApi\Content\js\libs\jquery.ba-throttle-debounce.min.js" />
     <EmbeddedResource Include="WebApi\Content\js\libs\jquery.fileupload.js" />
