added ApplicationInstance.Process.CreateNoWindow configuration param

--- a/src/Inceptum.AppServer/app.config
+++ b/src/Inceptum.AppServer/app.config
@@ -1,16 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-  </startup>
+  <appSettings>
+       <!--   <add key="confSvcUrl" value="http://otherappserver:9223" />-->
+       <add key="ApplicationInstance.Process.CreateNoWindow" value="" />
+  </appSettings>
   <system.net>
     <defaultProxy enabled="false">
       <proxy />
     </defaultProxy>
   </system.net>
-  <appSettings>
-    <!--   <add key="confSvcUrl" value="http://otherappserver:9223" />-->
-  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <probing privatePath="bin" />
@@ -68,4 +66,7 @@
       </providers>
     </roleManager>
   </system.web>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
