--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -59,6 +59,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Prefer32Bit>false</Prefer32Bit>
     <DocumentationFile>bin\Debug\AppServer.XML</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\Release\</OutputPath>
@@ -234,7 +235,10 @@
     <Compile Include="..\WcfHelper.cs">
       <Link>Utils\WcfHelper.cs</Link>
     </Compile>
-    <Compile Include="AppDiscovery\FolderApplicationRepository.cs" />
+    <Compile Include="AppDiscovery\ApplicationInfo.cs" />
+    <Compile Include="AppDiscovery\FileSystem\FolderApplicationRepository.cs" />
+    <Compile Include="AppDiscovery\NuGet\ConfigTransformer.cs" />
+    <Compile Include="AppDiscovery\NuGet\NugetExtensions.cs" />
     <Compile Include="AppServerSetup.cs" />
     <Compile Include="AppServerExternalConfigurationProvider.cs" />
     <Compile Include="Hosting\JobObject.cs" />
