--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -238,6 +238,7 @@
     <Compile Include="AppDiscovery\ApplicationInfo.cs" />
     <Compile Include="AppDiscovery\FileSystem\FolderApplicationRepository.cs" />
     <Compile Include="AppDiscovery\NuGet\ConfigTransformer.cs" />
+    <Compile Include="AppDiscovery\NuGet\NugetApplicationRepositoryConfiguration.cs" />
     <Compile Include="AppDiscovery\NuGet\NugetExtensions.cs" />
     <Compile Include="AppServerSetup.cs" />
     <Compile Include="AppServerExternalConfigurationProvider.cs" />
