--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -238,8 +238,9 @@
     <Compile Include="AppDiscovery\ApplicationInfo.cs" />
     <Compile Include="AppDiscovery\FileSystem\FolderApplicationRepository.cs" />
     <Compile Include="AppDiscovery\NuGet\ConfigTransformer.cs" />
+    <Compile Include="Runtime\FrameworkNameExtensions.cs" />
     <Compile Include="AppDiscovery\NuGet\NugetApplicationRepositoryConfiguration.cs" />
-    <Compile Include="AppDiscovery\NuGet\NugetExtensions.cs" />
+    <Compile Include="AppDiscovery\NuGet\ProjectSystemCompatibility.cs" />
     <Compile Include="Configuration\AppServerExternalConfigurationProvider.cs" />
     <Compile Include="Hosting\JobObject.cs" />
     <Compile Include="AppDiscovery\NuGet\ProjectManagerWrapper.cs" />
