ConfigurationFacility: type convertion related bug fix

--- a/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
+++ b/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
@@ -81,6 +81,8 @@
     <Compile Include="AppInfo.cs" />
     <Compile Include="AppServerContext.cs" />
     <Compile Include="Configuration\BundleNotFoundException.cs" />
+    <Compile Include="Configuration\Convertion\IJsonObjectAccessor.cs" />
+    <Compile Include="Configuration\Convertion\JsonObjectAccessor.cs" />
     <Compile Include="Configuration\IConfigurationFacility.cs" />
     <Compile Include="Configuration\IConnectionStringProvider.cs" />
     <Compile Include="Configuration\IManageableConfigurationProvider.cs" />
