--- a/src/Inceptum.AppServer.Tests/packages.config
+++ b/src/Inceptum.AppServer.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" requireReinstallation="True" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NLog" version="2.1.0" targetFramework="net40" requireReinstallation="True" />
   <package id="NuGet.Core" version="2.9.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
