--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\FixNuspecVersions\packages.config" />
   <repository path="..\Inceptum.AppServer.AppHost\packages.config" />
   <repository path="..\Inceptum.AppServer.Configuration\packages.config" />
   <repository path="..\Inceptum.AppServer.Sdk.Cqrs\packages.config" />
