installing application as restore of packages defined in config/packages.config file of package (if file is  provided)

--- a/src/Inceptum.AppServer.TestApp/Inceptum.AppServer.TestApp.nuspec
+++ b/src/Inceptum.AppServer.TestApp/Inceptum.AppServer.TestApp.nuspec
@@ -13,6 +13,7 @@
     <tags>Inceptum.AppServer.Application</tags>
   </metadata>
   <files> 
+    <file src="packages.config" target="config" /> 
     <file src="App.config" target="config" /> 
     <file src="nlog.config" target="config" /> 
     <file src="bin\$Configuration$\Content\**\*.*" target="Content" />
