html escaping when outputing logs to UI

--- a/src/Inceptum.AppServer.Sdk.Cqrs/Inceptum.AppServer.Sdk.Cqrs.csproj
+++ b/src/Inceptum.AppServer.Sdk.Cqrs/Inceptum.AppServer.Sdk.Cqrs.csproj
@@ -102,7 +102,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Inceptum.AppServer.Sdk.Cqrs.nuspec" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Inceptum.AppServer.Sdk\Inceptum.AppServer.Sdk.csproj">
