--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -350,6 +350,7 @@
     <Content Include="Scripts\mdd_modal_background.png" />
     <Content Include="Scripts\mdd_styles.css" />
     <Content Include="Scripts\mdd_toolbar.png" />
+    <EmbeddedResource Include="WebApi\Content\js\libs\deepmerge.js" />
     <EmbeddedResource Include="WebApi\Content\js\views\search.js" />
     <EmbeddedResource Include="WebApi\Content\js\views\applications.js" />
     <EmbeddedResource Include="WebApi\Content\js\libs\codemirror\addon\comment\comment.js" />
